<resources>
    <string name="app_name">Pet Record Keeper</string>
    <string name="add_pet">Add New Pet</string>
    <string name="profile">Profile</string>
    <string name="pet_name_label">Pet\'s Name</string>
    <string name="remove">Remove</string>
    <string name="add_saved_picture">Add Saved Picture</string>
    <string name="take_new_picture">Take New Picture</string>
    <string name="birth_date">Birth / Adoption Date</string>
    <string name="fab_add_pet">Add New Pet</string>
    <string name="delete_pet">Remove</string>
    <string name="update_pet">Update</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_new_note">Add New Note for</string>
    <string name="edit_saved_note">Edit</string>
    <string name="edit_note">Edit Note</string>
    <string name="history_list_title">History for </string>
    <string name="note_name">Note Name</string>
    <string name="note_text">Notes</string>
    <string name="note_date">Note Date</string>
    <string name="add_note_button">Add Note</string>
    <string name="add_image_label">Add your favorite saved photo or take a new picture of your pet!</string>
    <string name="add_documentation">Add Vet Receipt, Picture, Documentation, etc.</string>
    <string name="home_link">Home</string>
    <string-array name="species_array">
        <item>Cat</item>
        <item>Dog</item>
        <item>Fish</item>
        <item>Reptile</item>
        <item>Other</item>
    </string-array>
</resources>
