<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPetHistory">

    <TextView
        android:id="@+id/pet_name_label"
        android:text="@string/add_new_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/note_name"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:transitionName="name_transition" />

    <EditText
        android:id="@+id/note_text"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="6"
        android:gravity="top|left"
        android:maxLines="10"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/add_photo_button"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/launch_camera_button"
        android:layout_marginTop="0dp"
        android:text="@string/add_saved_picture" />

    <Button
        android:id="@+id/launch_camera_button"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/pet_photo_view"
        android:layout_marginTop="0dp"
        android:text="@string/take_new_picture" />

    <ImageView
        android:id="@+id/vet_receipt_view"
        android:layout_width="match_parent"
        android:layout_height="267dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/add_documentation" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/update_pet"
        android:textAlignment="center" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/delete_pet"
        android:textAlignment="center" />

</android.support.constraint.RelativeLayout>