<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPetHistory"
    android:id="@+id/relativeLayout">

    <EditText
        android:id="@+id/note_name"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="0dp"
        android:hint="@string/note_name"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:transitionName="name_transition"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/add_photo_button" />

    <EditText
        android:id="@+id/note_date"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="500dp"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:hint="@string/note_date"
        android:inputType="date"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/note_text"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:layout_marginBottom="350dp"
        android:gravity="start"
        android:hint="@string/note_text"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLines="10"
        android:minLines="3"
        android:scrollbars="vertical"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/add_note_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <Button
        android:id="@+id/add_photo_button"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="488dp"
        android:text="@string/add_saved_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/launch_camera_button"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="488dp"
        android:layout_marginEnd="16dp"
        android:text="@string/take_new_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_image_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_documentation"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/vet_receipt_view"
        android:layout_width="match_parent"
        android:layout_height="267dp"
        android:layout_marginTop="212dp"
        android:contentDescription="@string/add_documentation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_note_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_note_button"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>